fix(web): make long task output readable
Before, long task output would flow off the screen without a way to see
the content.

With this change, the inner task details view becomes scrollable when
more output is shown than what fits on the screen.

The "variable advertisers" popup had to be tweaked a bit to make it
not trigger a scrollbar but hover on top of the task details window.

--- a/src/web-client/src/component/task_details.scss
+++ b/src/web-client/src/component/task_details.scss
@@ -22,10 +22,19 @@
     @extend .modal-card-body;
     @extend .has-background-white-ter;
 
-    overflow: visible;
+    overflow: scroll;
+    padding-bottom: 0;
 
     p { @extend .content; }
     > div { @extend .container; }
+
+    // make sure the bottom padding remains with overflow:scroll
+    &::after {
+      content: "";
+      display: block;
+      height: 20px;
+      width: 100%;
+    }
   }
 
   > div:first-child { @extend .modal-background; }
@@ -48,7 +57,13 @@
       @extend .message;
 
       .message-staging { display: none; }
-      .message-body { @extend .content; }
+
+      .message-body {
+        @extend .content;
+
+        // visual changes to make the output a bit more compacted
+        li { margin-top: 0; }
+      }
     }
   }
 
